Closed Bug 1732116 Opened 3 years ago Closed 3 years ago

Rearranging tabs by dragging creates duplicate tab

Categories

(Core :: Widget: Gtk, defect, P1)

All
Linux
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- verified

People

(Reporter: kevin, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Starting with Firefox Nightly 94.0a1 (2021-09-22) (64-bit) on Linux with X11 or Wayland, if I drag a tab to rearrange it, the tab is duplicated rather than moved to the drag destination. To reproduce:

  1. Launch Firefox with a fresh profile.
  2. Ctrl-Click Wikipedia to open it in a new tab.
  3. Drag the Wikipedia tab to the left of New Tab.
  4. Observe that there are now 2 tabs with Wikipedia, one on either side of New Tab, rather than moving the Wikipedia tab from right to left of New Tab.

mozregression:

Last good revision: 0f7d37986a52523e5d13f3a4a7354c689f20ee0a
First bad revision: f213f078a6d2a0e79a5632c1ead78fd6a0f4eeb1
Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0f7d37986a52523e5d13f3a4a7354c689f20ee0a&tochange=f213f078a6d2a0e79a5632c1ead78fd6a0f4eeb1

Suggests this may have been regressed by Bug 1731197.

Has Regression Range: --- → yes
Has STR: --- → yes
Regressed by: 1731197

Set release status flags based on info from the regressing bug 1731197

May be caused by gdk_drag_context_get_actions() -> gdk_drag_context_get_suggested_action() change, will look at it.

Blocks: linuxdad
Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Priority: -- → P1
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/ab39b9f4e860
[Linux] Use gdk_drag_context_get_actions() to get drop action, r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Flags: qe-verify+

Reproduced this bug using STR from comment 0, on an affected Nightly build, running Ubuntu 18.04 x64.

The issue is verified as fixed on latest Beta 94.0b6, under Ubuntu 18.04 x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1767460
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: