Bug 1732116 [Linux] Use gdk_drag_context_get_actions() to get drop action, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D126501